Updated skills overflow bug

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -677,13 +677,14 @@
   padding: 20px;
   height: 250px;
   width: 90vw;
-  overflow: scroll;
+  overflow-y: auto;
   position: relative;
   background: #fff;
   border-radius: 8px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   margin: 10px auto;
   color: #333;
+  overflow-x: hidden;
 }
 
 .skill-content.show {
@@ -770,10 +771,6 @@
     max-width: unset;
     margin: 10px auto;
     height: 50vh;
-  }
-
-  .skill-content .scrolling-banner{
-    overflow: scroll;
   }
 
   .skills-dropdown-menu {
